# TankFactory

./: .gitignore  CyberTheme_guide.txt  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/rbtsoft/tankfactory/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  lsb_tank_decoder.cpp  lsb_tank_encoder.cpp  mirage_tank_coder.cpp  mirage_tank_encoder.cpp  native-lib.cpp
app/src/main/java/com/domity/cybertheme/atoms/: CyberAtoms.kt
app/src/main/java/com/domity/cybertheme/foundation/: CyberThemeData.kt
app/src/main/java/com/domity/cybertheme/molecules/: CyberComponents.kt  CyberLoading.kt  CyberSlider.kt  CyberSwitch.kt
app/src/main/java/com/domity/cybertheme/templates/: CyberScaffold.kt
app/src/main/java/com/rbtsoft/tankfactory/: LSBTankCoder.kt  LSBTankEncoder.kt  LSBTankMainViewModel.kt  LSBTankMakerScreen.kt  LSBTankViewerScreen.kt  LSBTankViewerViewModel.kt  MainActivity.kt  MirageTankEncoder.kt  MirageTankMainViewModel.kt  MirageTankMakerScreen.kt  MirageTankViewer.kt  settings.kt
app/src/main/java/com/rbtsoft/tankfactory/LSBTank/: LSBTankCoder.kt  LSBTankMainViewModel.kt  LSBTankMakerScreen.kt  LSBTankMakerViewModel.kt  LSBTankViewerScreen.kt  LSBTankViewerViewModel.kt
app/src/main/java/com/rbtsoft/tankfactory/MirageTank/: MirageTankCoder.kt  MirageTankEncoder.kt  MirageTankMainViewModel.kt  MirageTankMakerScreen.kt  MirageTankMakerViewModel.kt  MirageTankViewer.kt  MirageTankViewerScreen.kt  NativeBitmapProcessor.kt
app/src/main/java/com/rbtsoft/tankfactory/general/: function.kt
app/src/main/java/com/rbtsoft/tankfactory/lsbtank/: LSBTankCoder.kt  LSBTankMakerScreen.kt  LSBTankMakerViewModel.kt  LSBTankViewerScreen.kt  LSBTankViewerViewModel.kt
app/src/main/java/com/rbtsoft/tankfactory/miragetank/: MirageTankCoder.kt  MirageTankMakerScreen.kt  MirageTankMakerViewModel.kt  MirageTankViewerScreen.kt
app/src/main/java/com/rbtsoft/tankfactory/obfuscation/: ObfuscationCoder.kt  ObfuscationViewerViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-v31/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+12 files in other folders)
